fix: hide table of contents on mobile

--- a/docs/css/base-styles.css
+++ b/docs/css/base-styles.css
@@ -20,6 +20,12 @@
     text-decoration: var(--link-text-decoration--hover) !important;
 }
 
+@media (min-width:320px) and (max-width:961px) {
+    .page_toc {
+        display: none;
+    }
+}
+
 @media (prefers-color-scheme: dark) {
     :root {
         --theme-color: white;
